--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "react-css",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://wehwayne2.github.io/vamonos_pest/",
   "type": "module",
   "scripts": {
+     "predeploy": "npm run build",
+  "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -22,6 +25,7 @@
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
     "sass": "^1.92.0",
     "sass-embedded": "^1.92.0",
