hover video player

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "include-media": "^2.0.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-hover-video-player": "^10.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
