--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "include-media": "^2.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-hover-video-player": "^10.0.2"
+    "react-hover-video-player": "^10.0.2",
+    "react-scroll": "^1.9.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
